# infra_red

./: README.md
src/: CMakeLists.txt  FirstWindow.py  Infrared_Thermal.py  Run_Infrared_Thermal.py  SimplePictureProcessing.h  conctolbound.c  function.cpp  img_rc.py  main.cpp  main2  pot.h  thermometry.h
